# job-board

./: .envrc  pyproject.toml
.direnv/python-3.11/: pyvenv.cfg
job_board/job_board/: settings.py  urls.py
job_board/job_postings/: admin.py  forms.py  models.py  urls.py  views.py
job_board/job_postings/migrations/: 0001_initial.py  0002_jobposting_title.py  0003_alter_jobposting_content.py  0004_alter_jobposting_pub_date.py
job_board/job_postings/templates/job_postings/: create_job_posting.html  job_postings.html
job_board/job_site_documentation/: mkdocs.yml
job_board/job_site_documentation/docs/: creating_post.md  home_page.md  overview.md
job_board/job_site_documentation/site/: 404.html  index.html  search.html
job_board/job_site_documentation/site/about/: index.html
job_board/job_site_documentation/site/examplePage/: index.html
job_board/job_site_documentation/site/search/: search_index.json
