[tool.poetry]
name = "job-board"
version = "0.1.0"
description = ""
authors = ["Krzysztof <krzysiek.nooworyta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
